--- a/src/assets/Less/cloud_printer.css
+++ b/src/assets/Less/cloud_printer.css
@@ -45,71 +45,72 @@
   border-radius: 0;
   width: auto;
 }
-.row {
+#prev {
   padding: 0 40px;
+  margin-bottom: 20px;
+  height: 100%;
 }
-.row .prev_left {
+#prev .prev_left {
   margin-top: 40px;
   background-color: #fafafa;
   height: 620px;
   margin-bottom: 40px;
 }
-.row .prev_left #canvas3d {
+#prev .prev_left #canvas3d {
   width: 100%;
   height: 100%;
 }
-.row .prev_left #uploadForm {
+#prev .prev_left #uploadForm {
   display: none;
 }
-.row .prev_right {
+#prev .prev_right {
   margin-top: 40px;
-  height: 300px;
 }
-.row .prev_right li {
+#prev .prev_right li {
   list-style: none;
   background-color: #fff;
   font-size: 20px;
   line-height: 50px;
 }
-.row .prev_right li img {
+#prev .prev_right li img {
   display: inline-block;
   width: 45px;
   height: 45px;
 }
-.row .prev_right li .file_png,
-.row .prev_right li .size_png {
+#prev .prev_right li .file_png,
+#prev .prev_right li .size_png {
   width: 35px;
   height: 35px;
   margin-left: 6px;
   margin-right: 4px;
 }
-.row .prev_right li .resize_png,
-.row .prev_right li .pla_png,
-.row .prev_right li .number_png,
-.row .prev_right li .time_png,
-.row .prev_right li .price_png {
+#prev .prev_right li .resize_png,
+#prev .prev_right li .pla_png,
+#prev .prev_right li .number_png,
+#prev .prev_right li .time_png,
+#prev .prev_right li .price_png {
   width: 30px;
   height: 30px;
   margin-left: 9px;
   margin-right: 5px;
 }
-.row .prev_right li .type_png {
+#prev .prev_right li .type_png {
   width: 39px;
   height: 39px;
   margin-left: 5px;
 }
-.row .prev_right li span {
+#prev .prev_right li span {
   display: inline-block;
   vertical-align: middle;
 }
-.row .prev_right li .select {
+#prev .prev_right li .select {
   display: inline-block;
   height: 29px;
   width: 80px;
   vertical-align: middle;
   position: relative;
 }
-.row .prev_right li .select:after {
+#prev .prev_right li .select:after {
   content: "";
   width: 14px;
   height: 18px;
@@ -120,7 +121,7 @@
   top: 6px;
   z-index: 99;
 }
-.row .prev_right li select {
+#prev .prev_right li select {
   width: 100%;
   padding: 0 9px;
   vertical-align: top;
@@ -132,18 +133,18 @@
   -moz-appearance: none;
   line-height: 29px;
 }
-.row .prev_right li .price {
+#prev .prev_right li .price {
   font-size: 16px;
   margin-left: 10px;
 }
-.row .prev_right li .pro_bar {
+#prev .prev_right li .pro_bar {
   width: 350px;
   height: 3px;
   line-height: 25px;
   position: relative;
   margin: 10px 0 10px 53px;
 }
-.row .prev_right li .pro_bar .progress {
+#prev .prev_right li .pro_bar .progress {
   width: 300px;
   height: 100%;
   position: relative;
@@ -151,12 +152,12 @@
   top: 0;
   background-color: #bccbbf;
 }
-.row .prev_right li .pro_bar .progress .progress-bar {
+#prev .prev_right li .pro_bar .progress .progress-bar {
   width: 0;
   height: 100%;
   background-color: #1ac272;
 }
-.row .prev_right li .pro_bar .pro_control {
+#prev .prev_right li .pro_bar .pro_control {
   position: absolute;
   left: 0;
   top: -6px;
@@ -165,74 +166,128 @@
   border-radius: 50%;
   background-color: #1ac272;
 }
-.row .prev_right li .pro_bar #progress_value {
+#prev .prev_right li .pro_bar #progress_value {
   position: absolute;
   right: 0;
   top: -11px;
 }
-.row .prev_right li .pri_type {
+#prev .prev_right li .pri_type {
   line-height: 25px;
   margin-left: 50px;
 }
-.row .prev_right li .pri_type button {
+#prev .prev_right li .pri_type button {
   line-height: 11px;
   width: 80px;
   text-align: center;
 }
-.row .prev_right li .pri_type button:hover {
+#prev .prev_right li .pri_type button:hover {
   background-color: #1ac272;
   color: #fff;
 }
-.row .prev_right li .pri_type .selected {
+#prev .prev_right li .pri_type .selected {
   background-color: #1ac272;
   color: #fff;
 }
-.row .prev_right li .number span {
+#prev .prev_right li .number span {
   width: 30px;
   background: #1ac272;
   text-align: center;
   line-height: 25px;
   vertical-align: middle;
 }
-.row .prev_right li .number span:nth-child(1) {
+#prev .prev_right li .number span:nth-child(1) {
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   cursor: pointer;
   color: #fff;
 }
-.row .prev_right li .number span:nth-child(2) {
+#prev .prev_right li .number span:nth-child(2) {
   border-radius: 0;
   width: 50px;
   background-color: #fafafa;
 }
-.row .prev_right li .number span:nth-child(3) {
+#prev .prev_right li .number span:nth-child(3) {
   border-bottom-right-radius: 5px;
   border-top-right-radius: 5px;
   cursor: pointer;
   color: #fff;
 }
-.row .prev_right li .money {
+#prev .prev_right li .money {
   font-size: 30px;
   color: #1ac272;
 }
-.row .prev_right li .op_btn {
+#prev .prev_right li .op_btn {
   background-color: #1ac272;
   margin-right: 20px;
   border-radius: 5px;
   font-size: 12px;
 }
-.row .prev_right li .op_btn:hover {
+#prev .prev_right li .op_btn:hover {
   border-color: #1ac272;
 }
-.queue {
-  background-color: #ff4515;
+#shopCar-wrapper {
   width: 100%;
-  height: 500px;
+  padding: 0 20px;
 }
-.queue1 {
-  background-color: #84ff24;
-  height: 200px;
+#shopCar-wrapper .shopping .text-right {
+  height: 50px;
+  line-height: 50px;
+}
+#shopCar-wrapper .shopping .text-right .sumMoney {
+  margin-right: 10px;
+  line-height: 50px;
+  font-size: 20px;
+}
+#shopCar-wrapper .shopping .text-right .sumAll {
+  width: 60px;
+  height: 35px;
+  margin-bottom: 8px;
+}
+#upload-wrapper {
   width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 75px;
+  left: 0;
+  bottom: 0;
+  z-index: 99;
+}
+#upload-wrapper .img-wrapper {
+  width: 100%;
+  height: 100%;
+  background-image: url('../images/bg-img.jpg');
+  background-size: cover;
+}
+#upload-wrapper .upload {
+  width: 250px;
+  height: 150px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -125px;
+  margin-top: -150px;
+  z-index: 999;
+}
+#upload-wrapper .upload .btn-upload {
+  display: inline-block;
+  width: 100%;
+  height: 100px;
+  border-radius: 55px;
+  border: 8px solid #fff;
+  font-size: 30px;
+  line-height: 84px;
+  cursor: pointer;
+  letter-spacing: 5px;
+  text-decoration: none;
+  color: #fff;
+}
+#upload-wrapper .upload .text-wrapper {
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  color: #fff;
+  font-size: 18px;
+  letter-spacing: 4px;
 }
 .footer {
   background: #808080a1;
