--- a/src/assets/Less/cloud_printer.less
+++ b/src/assets/Less/cloud_printer.less
@@ -1,3 +1,4 @@
+// 导航样式
 .c_navbar{
   background-color: #464646;
   border-color: #e7e7e700;
@@ -18,7 +19,6 @@
           color: #fff;
         }
     }
-
     .btn_login{
       border: 3px solid #fff;
       border-radius: 18px;
@@ -47,11 +47,11 @@
     }
   }
 }
-
-
-
-.row{
+// 模型预览及设置样式
+#prev{
   padding: 0 40px;
+  margin-bottom: 20px;
+  height: 100%;
   .prev_left{
     margin-top: 40px;
     background-color: #fafafa;
@@ -65,10 +65,9 @@
       display: none;
     }
   }
-
   .prev_right{
     margin-top: 40px;
-    height: 300px;
+    // height: 300px;
     li {
       list-style: none;
       background-color: #fff;
@@ -224,33 +223,78 @@
     }
   }
 }
-
-
-.mix(){
-  width: 30px;
-  background: #1ac272;
-  text-align: center;
-  line-height: 25px;
-  vertical-align: middle;
+// 购物车样式
+#shopCar-wrapper{
+  width: 100%; 
+  padding: 0 20px;
+  .shopping{
+    .text-right{
+      height: 50px;
+      line-height: 50px;
+      .sumMoney{
+        margin-right: 10px;
+        line-height: 50px;
+        font-size: 20px;
+      }
+      .sumAll{
+        width: 60px;
+        height: 35px;
+        margin-bottom: 8px;
+        // line-height: 30px;
+      }
+    }
+  }
 }
-
-
-.queue{
-  background-color: #ff4515;
+//类似蒙版打印文件界面样式
+#upload-wrapper{
   width: 100%;
-  height: 500px;
+  height: 100%;
+  position: absolute;
+  top: 75px;
+  left: 0;
+  bottom: 0;
+  z-index: 99;
+  .img-wrapper{
+    width: 100%;
+    height: 100%;
+    background-image: url('../images/bg-img.jpg');
+    background-size: cover;
+  }
+  .upload{
+    width: 250px;
+    height: 150px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left:-125px; 
+    margin-top: -150px;
+    z-index: 999;
+    .btn-upload{
+      display: inline-block;
+      width: 100%;
+      height: 100px;
+      border-radius: 55px;
+      border: 8px solid #fff;
+      font-size: 30px;
+      line-height: 84px;
+      cursor: pointer;
+      letter-spacing: 5px;
+      text-decoration: none;
+      color: #fff;
+    }
+    .text-wrapper{
+      width: 100%;
+      height: 50px;
+      line-height: 50px;
+      color: #fff;
+      font-size: 18px;
+      letter-spacing: 4px;
+    }
+  }
 }
-.queue1{
-  background-color: #84ff24;
-  height: 200px;
-  width: 100%;
-}
 
 
-
-
-
-
+// 底部信息样式
 .footer {
    background:  #808080a1;
       div {
@@ -267,4 +311,11 @@
                   }
             }
       }
+}
+.mix(){
+  width: 30px;
+  background: #1ac272;
+  text-align: center;
+  line-height: 25px;
+  vertical-align: middle;
 }
