合并部分css文件，减少http请求数

--- a/src/assets/Less/about.css
+++ b/src/assets/Less/about.css
@@ -219,3 +219,16 @@
   font-size: 36px;
   font-weight: bolder;
 }
+#footer {
+  background: #808080a1;
+}
+#footer div div .f_img {
+  width: 40px;
+  display: inline-block;
+  margin-right: 25px;
+  cursor: pointer;
+}
+#footer div div h3 {
+  color: white;
+  text-align: center;
+}
