--- a/src/assets/Less/index.less
+++ b/src/assets/Less/index.less
@@ -118,10 +118,10 @@
           text-align: left;
           line-height: 30px;
           font-size: 30px;
-        //   &:last-child {
-        //     width: 500px;
-        //     font-size: 18px;
-        //   }
+          //   &:last-child {
+          //     width: 500px;
+          //     font-size: 18px;
+          //   }
         }
       }
     }
@@ -163,6 +163,26 @@
         span {
           font-size: 25px;
         }
+      }
+    }
+  }
+}
+
+//底部样式
+#footer {
+  // display: none;
+  background: #808080a1;
+  div {
+    div {
+      .f_img {
+        width: 40px;
+        display: inline-block;
+        margin-right: 25px;
+        cursor: pointer;
+      }
+      h3 {
+        color: white;
+        text-align: center;
       }
     }
   }
