--- a/src/views/about.html
+++ b/src/views/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="../assets/Less/nav.css" />
     <link rel="stylesheet" href="../assets/Less/about.css" />
-    <link rel="stylesheet" href="../assets/Less/footer.css" />
+    <!-- <link rel="stylesheet" href="../assets/Less/footer.css" /> -->
   </head>
   <body>
     <nav class="nav-wrapper">
