--- a/src/assets/Less/index.less
+++ b/src/assets/Less/index.less
@@ -81,6 +81,10 @@
         img {
           width: 100px;
           height: 100px;
+          transition: transform 1.5s;
+          &:hover{
+            transform: rotate(360deg);
+          }
         }
       }
     }
