--- a/src/assets/Less/nav.less
+++ b/src/assets/Less/nav.less
@@ -47,6 +47,10 @@ body{
           margin-right: 40px;
           font-size: 20px;
           color: white;
+          transition: color 1s;
+          &:hover{
+            color: #1ac272;
+          }
         }
       }
     }
