--- a/src/views/about.html
+++ b/src/views/about.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="../bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="../assets/Less/nav.css" />
     <link rel="stylesheet" href="../assets/Less/about.css" />
-    <!-- <link rel="stylesheet" href="../assets/Less/footer.css" /> -->
+    <link
+      rel="shortcut icon"
+      href="../assets/images/favicon.ico"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <nav class="nav-wrapper">
@@ -24,7 +28,7 @@
           <a href="https://3d.biowinedu.com/authenticate">
             <li>在线建模</li>
           </a>
-          <a href="./views/printing.html">
+          <a href="./printing.html">
             <li>在线打印</li>
           </a>
           <a>
@@ -43,13 +47,45 @@
     <main class="container-fuild">
       <section class="bg-wrapper">
         <div class="img-wrapper">
-          <img src="../assets/images/background.jpg" alt srcset />
+          <div class="hero-overlay"></div>
+          <img src="../assets/images/background.jpg" alt />
+          <div class="text-wrapper">
+            <p class="text">
+              年轻而极具创新思维，擅于从实践中获取真知的一群小伙子，为3D打印提供全新技术方案，追求新时代下的智能智造。
+            </p>
+          </div>
         </div>
       </section>
-      <section class="text-wrapper">
-        <p class="text">
-          年轻而极具创新思维，擅于从实践中获取真知的一群小伙子，为3D打印提供全新技术方案，追求新时代下的智能智造。
-        </p>
+      <section class="banner-wrapper container-fuild">
+        <ul>
+          <li>
+            <img class="" src="../assets/images/banner1.jpg" alt="轮播图" />
+          </li>
+          <li>
+            <img class="" src="../assets/images/banner2.jpg" alt="轮播图" />
+          </li>
+          <li>
+            <img class="" src="../assets/images/banner3.jpg" alt="轮播图" />
+          </li>
+          <li>
+            <img class="" src="../assets/images/banner4.jpg" alt="轮播图" />
+          </li>
+          <li>
+            <img class="" src="../assets/images/banner5.jpg" alt="轮播图" />
+          </li>
+          <li>
+            <img class="" src="../assets/images/banner1.jpg" alt="轮播图" />
+          </li>
+          <li>
+            <img class="" src="../assets/images/banner2.jpg" alt="轮播图" />
+          </li>
+          <li>
+            <img class="" src="../assets/images/banner3.jpg" alt="轮播图" />
+          </li>
+          <li>
+            <img class="" src="../assets/images/banner4.jpg" alt="轮播图" />
+          </li>
+        </ul>
       </section>
       <section class="container-wrapper">
         <section class="container approach-wrapper">
@@ -58,7 +94,7 @@
             <li class="col-md-4">
               <div class="img-wrapper">
                 <div class="border">
-                  <img src="../assets/images/camra.png" alt />
+                  <img src="../assets/images/camra.png"  />
                 </div>
               </div>
               <p class="title">技术</p>
