--- a/src/assets/Less/about.css
+++ b/src/assets/Less/about.css
@@ -1,11 +1,10 @@
 .container-fuild .bg-wrapper {
-  height: 525px;
   min-width: 1135px;
 }
 .container-fuild .bg-wrapper .img-wrapper {
   min-width: 1135px;
   position: relative;
-  top: -75px;
+  top: -115px;
   bottom: 0;
   left: 0;
   z-index: -1;
@@ -15,20 +14,58 @@
   width: 100%;
   height: 100%;
 }
-.container-fuild .text-wrapper {
+.container-fuild .bg-wrapper .img-wrapper .hero-overlay {
   width: 100%;
-  height: 200px;
-  margin-top: 255px;
-  background-color: #a9f3d06e;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(60, 59, 63, 0.6);
 }
-.container-fuild .text-wrapper p {
+.container-fuild .bg-wrapper .img-wrapper .text-wrapper {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 240px;
+  background-color: #d7ffecf3;
+}
+.container-fuild .bg-wrapper .img-wrapper .text-wrapper p {
   width: 625px;
-  height: 200px;
+  height: 240px;
   margin: 0 auto;
-  padding-top: 30px;
+  padding-top: 50px;
   box-sizing: border-box;
   text-align: center;
   font-size: 30px;
+}
+.container-fuild .banner-wrapper {
+  margin-top: -115px;
+  left: 0;
+  overflow: hidden;
+}
+.container-fuild .banner-wrapper ul {
+  padding: 0;
+  margin: 0;
+  width: 3600px;
+  animation: banner 20s linear infinite;
+}
+.container-fuild .banner-wrapper ul li {
+  float: left;
+  width: 400px;
+  list-style: none;
+}
+.container-fuild .banner-wrapper ul li img {
+  width: 400px;
+  height: 300px;
+}
+@keyframes banner {
+  from {
+    margin-left: 0;
+  }
+  to {
+    margin-left: -2000px;
+  }
 }
 .container-fuild .container-wrapper,
 .container-fuild .partner-container,
@@ -138,6 +175,18 @@
   line-height: 75px;
   border: 1px solid #08aba6;
   border-radius: 50%;
+  transition: transform 2s;
+}
+.container-fuild .container-wrapper .approach-wrapper .intro-wrapper li .img-wrapper .border:hover,
+.container-fuild .partner-container .approach-wrapper .intro-wrapper li .img-wrapper .border:hover,
+.container-fuild .feature-container .approach-wrapper .intro-wrapper li .img-wrapper .border:hover,
+.container-fuild .container-wrapper .partner-wrapper .intro-wrapper li .img-wrapper .border:hover,
+.container-fuild .partner-container .partner-wrapper .intro-wrapper li .img-wrapper .border:hover,
+.container-fuild .feature-container .partner-wrapper .intro-wrapper li .img-wrapper .border:hover,
+.container-fuild .container-wrapper .feature-wrapper .intro-wrapper li .img-wrapper .border:hover,
+.container-fuild .partner-container .feature-wrapper .intro-wrapper li .img-wrapper .border:hover,
+.container-fuild .feature-container .feature-wrapper .intro-wrapper li .img-wrapper .border:hover {
+  transform: rotateY(180deg);
 }
 .container-fuild .container-wrapper .approach-wrapper .intro-wrapper li .img-wrapper .border-none,
 .container-fuild .partner-container .approach-wrapper .intro-wrapper li .img-wrapper .border-none,
