--- a/src/assets/Less/about.less
+++ b/src/assets/Less/about.less
@@ -1,12 +1,13 @@
 .container-fuild {
   .bg-wrapper {
-    height: 525px;
+    // height: 525px;
     min-width: 1135px;
+    // margin-bottom: 255px;
     .img-wrapper {
       // height: 600px;
       min-width: 1135px;
       position: relative;
-      top: -75px;
+      top: -115px;
       bottom: 0;
       left: 0;
       z-index: -1;
@@ -15,23 +16,67 @@
         width: 100%;
         height: 100%;
       }
+      .hero-overlay {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: rgba(60, 59, 63, 0.6);
+      }
+      .text-wrapper {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 240px;
+        background-color: #d7ffecf3;
+        p {
+          width: 625px;
+          height: 240px;
+          margin: 0 auto;
+          padding-top: 50px;
+          box-sizing: border-box;
+          text-align: center;
+          font-size: 30px;
+        }
+      }
     }
   }
-  .text-wrapper {
-    width: 100%;
-    height: 200px;
-    margin-top: 255px;
-    background-color: #a9f3d06e;
-    p {
-      width: 625px;
-      height: 200px;
-      margin: 0 auto;
-      padding-top: 30px;
-      box-sizing: border-box;
-      text-align: center;
-      font-size: 30px;
+
+  // 轮播图的样式
+  .banner-wrapper {
+    // position: relative;
+    // margin-top: 195px;
+    margin-top: -115px;
+    left: 0;
+    overflow: hidden;
+    ul {
+      padding: 0;
+      margin: 0;
+      width: 3600px;
+      animation: banner 20s linear infinite;
+      li {
+        float: left;
+        width: 400px;
+        list-style: none;
+        img {
+          width: 400px;
+          height: 300px;
+        }
+      }
     }
   }
+  //轮播图动画
+  @keyframes banner {
+    from {
+      margin-left: 0;
+    }
+    to {
+      margin-left: -2000px;
+    }
+  }
+
   .container-wrapper,
   .partner-container,
   .feature-container {
@@ -81,6 +126,10 @@
               line-height: 75px;
               border: 1px solid #08aba6;
               border-radius: 50%;
+              transition: transform 2s;
+              &:hover {
+                transform: rotateY(180deg);
+              }
             }
             .border-none {
               border: none;
