--- a/src/assets/Less/cloud_printer.css
+++ b/src/assets/Less/cloud_printer.css
@@ -1,53 +1,6 @@
 body {
   height: 100%;
 }
-body .c_navbar {
-  background-color: #464646;
-  border-color: #e7e7e700;
-  margin-bottom: 0;
-}
-body .c_navbar .c_cot {
-  width: 90%;
-}
-body .c_navbar .c_cot .c_header {
-  display: inline-block;
-  width: 19%;
-  height: 75px;
-}
-body .c_navbar .c_cot .nav_menu_li {
-  margin-right: 1vh;
-}
-body .c_navbar .c_cot .nav_menu_li .nav_menu_font {
-  line-height: 44px;
-  font-size: 1.5em;
-  color: #fff;
-}
-body .c_navbar .c_cot .btn_login {
-  border: 3px solid #fff;
-  border-radius: 18px;
-  margin-top: 21px;
-  width: 74px;
-  height: 36px;
-}
-body .c_navbar .c_cot .btn_login a {
-  color: #fff;
-  line-height: 0;
-  font-size: 1.3em;
-}
-body .c_navbar .c_cot .btn_login a .img-circle {
-  width: 45px;
-  height: 45px;
-  display: inline-block;
-}
-body .c_navbar .c_cot .btn_login a span {
-  display: inline-block;
-}
-body .c_navbar .c_cot .login_img {
-  margin-top: 0;
-  border: none;
-  border-radius: 0;
-  width: auto;
-}
 body #container {
   width: 100%;
 }
@@ -159,7 +112,7 @@ body #container #prev .prev_right li .pro_bar .progress {
   background-color: #bccbbf;
 }
 body #container #prev .prev_right li .pro_bar .progress .progress-bar {
-  width: 0;
+  width: 300px;
   height: 100%;
   background-color: #1ac272;
 }
@@ -261,7 +214,7 @@ body #upload-wrapper {
 body #upload-wrapper .img-wrapper {
   width: 100%;
   height: 100%;
-  background-image: url('../images/bg-img.jpg');
+  background-image: url("../images/bg-img.jpg");
   background-size: cover;
 }
 body #upload-wrapper .upload {
